fix(side-menu): improve color contrasts

--- a/packages/core/src/components/side-menu/side-menu-collapse-button/side-menu-collapse-button.scss
+++ b/packages/core/src/components/side-menu/side-menu-collapse-button/side-menu-collapse-button.scss
@@ -1,6 +1,7 @@
 //@import '../theme/core/spacing/vars';
 @import '../../../../../../grid-deprecated/vars';
 @import '../../../global/_variables';
+@import '../../../mixins/focus-state';
 
 :host {
   position: sticky;
@@ -25,6 +26,10 @@
       left: 50%;
     }
   }
+}
+
+:host(:focus-visible) {
+  @include tds-focus-state-side-menu;
 }
 
 @media (min-width: $grid-lg) {
